<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="300dp"
	android:layout_height="wrap_content"
	android:background="@drawable/dialog"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/imageUrlTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:gravity="center"
		android:text="@string/image_url"
		android:textColor="@color/white"
		android:textSize="16sp" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:hint="@string/url_hint"
		android:minHeight="48dp"
		android:textColor="@color/white"
		android:textColorHint="@color/gray" />

	<Button
		android:id="@+id/getImageFromUrlButton"
		style="@style/Button.Secondary"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:includeFontPadding="false"
		android:paddingTop="0dp"
		android:text="@string/ok" />
</LinearLayout>