<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black">

	<!--TODO(БАГ! Удаляется картинка.)	-->
	<!--TODO(Сделать круглой.)	-->
	<ImageView
		android:id="@+id/profileImageView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:adjustViewBounds="true"
		android:scaleType="fitCenter"
		android:src="@drawable/avatar_placeholder"
		app:layout_constraintEnd_toStartOf="@+id/guideline3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/nameTextView"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/name_placeholder"
		android:textColor="@color/white"
		app:layout_constraintStart_toEndOf="@+id/profileImageView"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/emailTextView"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:text="@string/email_placeholder"
		android:textColor="@color/gray"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="@+id/nameTextView"
		app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

	<Button
		android:id="@+id/changeAvatarButton"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:background="@android:color/transparent"
		android:text="@string/change_avatar"
		android:textColor="@color/orange"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="@+id/profileImageView"
		app:layout_constraintStart_toStartOf="@+id/profileImageView"
		app:layout_constraintTop_toBottomOf="@+id/profileImageView" />

	<ImageView
		android:id="@+id/chatsImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="@+id/profileImageView"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:srcCompat="@drawable/comments" />

	<TextView
		android:id="@+id/chatsTextView"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="18dp"
		android:text="@string/chats"
		android:textColor="@color/white"
		android:textSize="14sp"
		app:layout_constraintBottom_toBottomOf="@+id/chatsImageView"
		app:layout_constraintStart_toEndOf="@+id/chatsImageView"
		app:layout_constraintTop_toTopOf="@+id/chatsImageView" />

	<View
		android:id="@+id/chatsView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="@+id/chatsImageView"
		app:layout_constraintEnd_toEndOf="@+id/chatsTextView"
		app:layout_constraintStart_toStartOf="@+id/chatsImageView"
		app:layout_constraintTop_toTopOf="@+id/chatsImageView" />

	<ImageView
		android:id="@+id/historyImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		app:layout_constraintStart_toStartOf="@+id/chatsImageView"
		app:layout_constraintTop_toBottomOf="@+id/chatsImageView"
		app:srcCompat="@drawable/ic_history" />

	<TextView
		android:id="@+id/historyTextView"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/history"
		android:textColor="@color/white"
		android:textSize="14sp"
		app:layout_constraintStart_toEndOf="@+id/historyImageView"
		app:layout_constraintStart_toStartOf="@+id/chatsTextView"
		app:layout_constraintTop_toTopOf="@+id/historyImageView" />

	<ImageView
		android:id="@+id/settingsImageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		app:layout_constraintStart_toStartOf="@+id/historyImageView"
		app:layout_constraintTop_toBottomOf="@+id/historyImageView"
		app:srcCompat="@drawable/ic_settings" />

	<TextView
		android:id="@+id/settingsTextView"
		style="@style/TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/settings"
		android:textColor="@color/white"
		android:textSize="14sp"
		app:layout_constraintStart_toEndOf="@+id/historyImageView"
		app:layout_constraintStart_toStartOf="@+id/historyTextView"
		app:layout_constraintTop_toTopOf="@+id/settingsImageView" />

	<Button
		android:id="@+id/logOutButton"
		style="@style/Button.Secondary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:text="@string/log_out"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.6" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.35" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>